# vmprograms

./: .gitignore  .gitmodules  README.md  build_and_upload.sh  upload.sh
examples/: api.h  build_espeak.sh  build_mandelbrot.sh  espeak.c  espeak.cpp  hello.c  hello.nim  mandelbrot.cpp  nim_build.sh  png.c
examples/dynamic_website/: CMakeLists.txt  build_website.sh  index.html  main.cpp  varnish_api.hpp
examples/facedetect/: CMakeLists.txt  build.sh  main.cpp
examples/json/: CMakeLists.txt  automate.sh  build.sh  minifier.cpp  my.json
examples/mandelbrot/: CMakeLists.txt  automate.sh  build_mandelbrot.sh  build_multisimd.sh  mandelbrot.cpp  upload.sh
examples/nim/: hello.nim  main.c  nim_build.sh  varnish.nim
examples/nim/env/: api.h  main.c  varnish.nim
examples/quickJS/: CMakeLists.txt  README.md  build_website.sh  index.html  main.c  my.js  static_builder.py
examples/quickJS/src/: http.c  main.c  my.js
examples/quickJS/www/: index.html
examples/vectorize/: CMakeLists.txt  automate.sh  build.sh  vectorize.cpp
examples/webshit/: build_website.sh  static_builder.py
examples/webshit/res/: index.html
scripts/: live_update.sh
tests/: format.txt  test_tenancy.sh  test_vmcommit.sh  tformat.txt
